tests/types/errors/binary_operator_type_error.err
1. error[T020]: operator `*` cannot be used on types string and float
  --> tests/types/errors/binary_operator_type_error.mochi:1:13

  1 | let x = "a" * 3.14 // string * float = invalid
    |             ^

help:
  Choose an operator that supports these operand types.